# Live-Poll

./: .env.example  .gitignore  Cargo.toml  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf  sorry.txt  test.html
.github/workflows/: cicd.yml
client/: Dockerfile  eslint.config.mjs  package.json  tailwind.config.ts
client/app/: NavBall.tsx  layout.tsx  page.tsx
client/app/login/: page.tsx
client/app/login/components/: CompleteLogin.tsx
client/app/polls/[id]/: Chart.tsx  Live.tsx  Vote.tsx  page.tsx
client/app/polls/manage/: page.tsx
client/app/polls/new/: page.tsx
client/app/register/: page.tsx
client/app/store/: AuthProvider.tsx  auth-store.ts
migrations/: 20241216112637_polls.sql
pool-board/: package-lock.json  package.json
pool-board/app/: NavBall.tsx  page.tsx
pool-board/app/login/: layout.tsx  page.tsx
pool-board/app/login/components/: CompleteLogin.tsx  StartLogin.tsx
pool-board/app/polls/[id]/: Chart.tsx  Live.tsx  Vote.tsx  page.tsx
pool-board/app/register/: layout.tsx  page.tsx
server/: .env  Cargo.toml  Dockerfile  package-lock.json  test.html  test.js
server/migrations/: 20241215151734_keys.sql
server/src/: main.rs
server/src/auth/: error.rs  get_user.rs  login.rs  mod.rs  register.rs  startup.rs  validate_session.rs
server/src/db/: auth.rs  create_pool.rs  mod.rs  polls.rs
server/src/polls/: mod.rs
src/: main.rs
src/auth/: error.rs  get_user.rs  login.rs  mod.rs  register.rs  session.rs  startup.rs  validate_session.rs
src/db/: auth.rs  polls.rs
src/polls/: manage_polls.rs
(+4 files in other folders)
