[package]
name = "livepool-server"
version = "0.1.0"
edition = "2021"
exclude=["/pool-board/**"]


[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
anyhow = "1.0.94"
chrono = {version="0.4.39", features = ["serde"]}
log = "0.4.22"
once_cell = "1.20.2"
openssl = "0.10.68"
openssl-sys = "0.9.104"
rand = "0.8.5"
serde = {version="1.0.216", features=["derive"]}
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
webauthn-rs = {version="0.5.0", features = ["danger-allow-state-serialisation"]}
actix-cors = "0.7.0"
serde_json = "1.0.133"
env_logger = "0.11.5"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "chrono","bigdecimal", "uuid"] }
lazy_static = "1.5.0"
dotenvy = "0.15.7"
async-stream = "0.3.6"
futures-util = "0.3.31"
